fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -546,6 +546,7 @@
     transform-origin: calc(100% - 15px) top;
     animation: headerNoti ease-in-out 0.15s;
     cursor: default;
+    z-index: 2;
 }
 
 
